--- a/plugin/ztree/css/coloRideStyle/coloRideStyle.css
+++ b/plugin/ztree/css/coloRideStyle/coloRideStyle.css
@@ -11,13 +11,13 @@ website:	http://code.google.com/p/jquerytree/
 .ztree * {padding:0; margin:0; font-size:14px; font-family: Verdana, Arial, Helvetica, AppleGothic, sans-serif}
 .ztree {margin:0; padding:5px; color:#333}
 .ztree li{padding:0; margin:0; list-style:none; line-height:24px; text-align:left; white-space:nowrap; outline:0}
-.ztree li ul{ margin:0; padding:0 0 0 18px;margin-left: 3px}
+.ztree li ul{ margin:0; padding:0 0 0 20px;margin-left: 4px}
 .ztree li ul.line{ background:url(./img/line_conn.gif) 0 0 repeat-y;}
 
 .ztree li a {padding:1px 3px 0 0; margin:0; cursor:pointer; height:17px; color:#333; background-color: transparent;
 	text-decoration:none; vertical-align:top; display: inline-block}
 .ztree li a:hover {text-decoration:underline}
-.ztree li a.curSelectedNode {padding-top:0px; background-color:#FFE6B0; color:black; height:24px; border:1px #FFB951 solid; opacity:0.8;border-radius: 2px}
+.ztree li a.curSelectedNode {padding-top:0px; background-color:#e1e1e1; color:black; height:24px; border:1px #e1e1e1 solid; opacity:0.8;border-radius: 2px}
 .ztree li a.curSelectedNode_Edit {padding-top:0px; background-color:#FFE6B0; color:black; height:16px; border:1px #FFB951 solid; opacity:0.8;}
 .ztree li a.tmpTargetNode_inner {padding-top:0px; background-color:#316AC5; color:white; height:16px; border:1px #316AC5 solid;
 	opacity:0.8; filter:alpha(opacity=80)}
@@ -36,7 +36,7 @@ website:	http://code.google.com/p/jquerytree/
 
 
 
-.ztree li span.button.chk {width:24px; height:24px; margin:0 3px 0 0; cursor: auto}
+.ztree li span.button.chk {width:24px; height:24px; margin:0; cursor: auto}
 /*.ztree li span.button.chk.checkbox_false_full {background-position:0 0}*/
 .ztree li span.button.chk.checkbox_false_full {background-position:-263px -5px}
 
@@ -84,34 +84,38 @@ website:	http://code.google.com/p/jquerytree/
 
 .ztree li span.button.switch {width:24px; height:24px}
 /*.ztree li span.button.root_open{background-position:-92px -54px}*/
-.ztree li span.button.root_open{background-position:-233px -107px}
+.ztree li span.button.root_open{background-position:-78px -207px}
 /*.ztree li span.button.root_close{background-position:-74px -54px}*/
-.ztree li span.button.root_close{background-position:-203px -107px}
-.ztree li span.button.roots_open{background-position:-92px 0}
-.ztree li span.button.roots_close{background-position:-74px 0}
+.ztree li span.button.root_close{background-position:-27px -207px}
+/*.ztree li span.button.roots_open{background-position:-92px 0}*/
+.ztree li span.button.roots_open{background-position:-77px -23px}
+/*.ztree li span.button.roots_close{background-position:-74px 0}*/
+.ztree li span.button.roots_close{background-position:-26px -23px}
 /*.ztree li span.button.center_open{background-position:-92px -18px}*/
-.ztree li span.button.center_open{background-position:-229px -39px}
+.ztree li span.button.center_open{background-position:-77px -91px}
 /*.ztree li span.button.center_close{background-position:-74px -18px}*/
-.ztree li span.button.center_close{background-position:-204px -39px}
-.ztree li span.button.bottom_open{background-position:-92px -36px}
-.ztree li span.button.bottom_close{background-position:-74px -36px}
+.ztree li span.button.center_close{background-position:-26px -91px}
+/*.ztree li span.button.bottom_open{background-position:-77px -158px}*/
+.ztree li span.button.bottom_open{background-position:-77px -158px}
+/*.ztree li span.button.bottom_close{background-position:-26px -158px}*/
+.ztree li span.button.bottom_close{background-position:-26px -158px}
 .ztree li span.button.noline_open{background-position:-92px -72px}
 .ztree li span.button.noline_close{background-position:-74px -72px}
 .ztree li span.button.root_docu{ background:none;}
 .ztree li span.button.roots_docu{background-position:-56px 0}
 /*.ztree li span.button.center_docu{background-position:-56px -18px}*/
-.ztree li span.button.center_docu{background-position:-388px -66px}
+.ztree li span.button.center_docu{background-position:-390px -65px}
 /*.ztree li span.button.bottom_docu{background-position:-56px -36px}*/
-.ztree li span.button.bottom_docu{background-position:-172px -72px}
+.ztree li span.button.bottom_docu{background-position:-174px -72px}
 .ztree li span.button.noline_docu{ background:none;}
 
-.ztree li span.button.ico_open{margin-right:2px; background-position:-400px -141px; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.ico_close{margin-right:2px; background-position:-366px -141px; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.ico_docu{margin-right:2px; background-position:-335px -138px; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.edit {margin-right:2px; background-position:-110px -48px; vertical-align:top; *vertical-align:middle}
-.ztree li span.button.remove {margin-right:2px; background-position:-110px -64px; vertical-align:top; *vertical-align:middle}
+.ztree li span.button.ico_open{margin-right:0px; background-position:-400px -141px; vertical-align:top; *vertical-align:middle}
+.ztree li span.button.ico_close{margin-right:0px; background-position:-366px -141px; vertical-align:top; *vertical-align:middle}
+.ztree li span.button.ico_docu{margin-right:0px; background-position:-337px -138px; vertical-align:top; *vertical-align:middle}
+.ztree li span.button.edit {margin-right:0px; background-position:-110px -48px; vertical-align:top; *vertical-align:middle}
+.ztree li span.button.remove {margin-right:0px; background-position:-110px -64px; vertical-align:top; *vertical-align:middle}
 
-.ztree li span.button.ico_loading{margin-right:2px; background:url(./img/loading.gif) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
+.ztree li span.button.ico_loading{margin-right:0px; background:url(./img/loading.gif) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle}
 
 ul.tmpTargetzTree {background-color:#FFE6B0; opacity:0.8; filter:alpha(opacity=80)}
 
