--- a/plugin/ztree/css/coloRideStyle/coloRideStyle.css
+++ b/plugin/ztree/css/coloRideStyle/coloRideStyle.css
@@ -18,12 +18,12 @@ website:	http://code.google.com/p/jquerytree/
 	text-decoration:none; vertical-align:top; display: inline-block}
 .ztree li a:hover {text-decoration:underline}
 .ztree li a.curSelectedNode {padding-top:0px; background-color:#e1e1e1; color:black; height:24px; border:1px #e1e1e1 solid; opacity:0.8;border-radius: 2px}
-.ztree li a.curSelectedNode_Edit {padding-top:0px; background-color:#FFE6B0; color:black; height:16px; border:1px #FFB951 solid; opacity:0.8;}
+.ztree li a.curSelectedNode_Edit {padding-top:0px; background-color:#e1e1e1; color:black; height:24px; border:1px #e1e1e1 solid; opacity:0.8;;border-radius: 2px}
 .ztree li a.tmpTargetNode_inner {padding-top:0px; background-color:#316AC5; color:white; height:16px; border:1px #316AC5 solid;
 	opacity:0.8; filter:alpha(opacity=80)}
 .ztree li a.tmpTargetNode_prev {}
 .ztree li a.tmpTargetNode_next {}
-.ztree li a input.rename {height:14px; width:80px; padding:0; margin:0;
+.ztree li a input.rename {height:20px; width:180px; padding:0; margin:0;
 	font-size:12px; border:1px #7EC4CC solid; *border:0px}
 .ztree li span {line-height:16px; margin-right:2px}
 .ztree li span.button {line-height:0; margin:0; width:24px; height:24px; display: inline-block; vertical-align:middle;
