--- a/app/plugin/ztree/css/ColoRideStyle/coloRideStyle.css
+++ b/app/plugin/ztree/css/ColoRideStyle/coloRideStyle.css
@@ -229,6 +229,14 @@ ul.ztree.zTreeDragUL {margin:0; padding:0; position:absolute; width:auto; height
             vertical-align: top;
             *vertical-align: middle
         }
+
+        .ztree li span.button.variable_ico_docu {
+            margin-right: 0px;
+            background: url(img/diy/approval2.png) no-repeat scroll 0 0 transparent;
+            vertical-align: top;
+            *vertical-align: middle
+        }
+
         .ztree li span.button.testsuite_ico_open,.ztree li span.button.testsuite_ico_close,.ztree li span.button.testsuite_ico_docu {
             margin-right: 0px;
             background: url(img/diy/view_details.png) no-repeat scroll 0 0 transparent;
