新增 运行时的状态条

--- a/app/assets/css/rfeditor.css
+++ b/app/assets/css/rfeditor.css
@@ -5,3 +5,10 @@
 .no-drag{
     -webkit-app-region: no-drag;
 }
+
+
+.running-status-bar{
+    height: 20px;
+    font-size: 14px;
+    line-height:20px;
+}
